# MoneyProgress_win

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.888649d  CMakeLists.txt.user.d748e9d  README.md  bar.cpp  bar.h  bar.ui  img.qrc  logo.rc  main.cpp  message.cpp  message.h  message.qss  message.ui  moneyprogress.cpp  moneyprogress.h  moneyprogress.pro  moneyprogress.qss  moneyprogress.ui
.github/workflows/: windows-mingw.yml
scripts/: windows-mingw-publish.ps1  windows-publish.ps1
